RunTimerSystem getrennt von World